	- Modules: Fixed nickserv/register to follow the rules of the updated API and disabled email checker until it is fixed.
	- Core: Updated the config to look nicer.
	- Core: Deleted the ID's in databases
	- API: You can now create custom services clients with serv_add()
	- Core/Modules: HostServ and MemoServ are no longer default services.
	- Modules: protocol/inspircd and protocol/charybdis are now version 0.8.
	- Core/Modules/Protocols: Fixed several bugs in the updated API.
	- Modules: Added hostserv/main.
	- Events: Added event_eos for when we finish syncing.
	- Protocols: Fixed a bug where, after 10 services clients, services would break.
	- Contrib - mattwb65: os_userlog now allows you to choose between OperServ or a custom service logging
	- Protocols: Added serv_sethost
	- Protocols - InspIRCd: check for m_chghost
	- Modules: Fixed a bug in hostserv/main where, it wouldn't create HostServ if we're already synced.
	- API: Added serv_del() for deleting services clients.
	- API: Made Chakora more modular by moving API stuff to separate modules located in src/API.
	- API: Added create_cmdtree() and delete_cmdtree() for enabling commands on only services clients we want to have commands.
	- Protocols: Added nick tracking for services on InspIRCd and half-way on Charybdis.
	- API: Added event_pds for executing hooks during syncing.
	- Chakora: Added ./man in bin/ for viewing the Chakora API Manual.
	- Chakora: Created a new flatfile database format for storing data in a different way than before.
	- API: Added is_identified
	- API: Added serv_enforce
	- Modules: Added nickserv/identify and nickserv/info
	- API: added metadata
	- API: added event_identify and event_register
	- XMLRPC: Scrapped XMLRPC, most likely permanently, due to it not working nor will we ever be able to create it at this time.
	- Core: we now need Email::Valid for Chakora
	- Modules: nickserv/register now checks for a valid email address
	- Modules: added nickserv/logout